Resolve sonar test issues